Added necessary libraries to load project. Added gradle configuration. Empty project is ready for development.