@@ -7,26 +7,94 @@
  * user guide available at https://docs.gradle.org/2.7/userguide/tutorial_java_projects.html
  */
 
-/*
-// Apply the java plugin to add support for Java
-apply plugin: 'java'
+allprojects {
+    repositories {
+        jcenter()
+        maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
+        maven { url "http://repo.maven.apache.org/maven2" }
+    }
+}
 
-// In this section you declare where to find the dependencies of your project
+apply plugin: 'java'
+apply plugin: 'idea'
+apply from: "http://dl.bintray.com/shemnon/javafx-gradle/8.1.1/javafx.plugin"
+
 repositories {
-    // Use 'jcenter' for resolving your dependencies.
-    // You can declare any Maven/Ivy/file repository here.
     jcenter()
 }
 
-// In this section you declare the dependencies for your production and test code
-dependencies {
-    // The production code uses the SLF4J logging API at compile time
-    compile 'org.slf4j:slf4j-api:1.7.12'
-
-    // Declare the dependency for your favourite test framework you want to use in your tests.
-    // TestNG is also supported by the Gradle Test task. Just change the
-    // testCompile dependency to testCompile 'org.testng:testng:6.8.1' and add
-    // 'test.useTestNG()' to your build script.
-    testCompile 'junit:junit:4.12'
+sourceSets {
+    dagger {
+        java {
+            srcDirs = ['src/dagger/java']
+        }
+    }
 }
-*/
+
+configurations {
+    compileDagger
+}
+
+dependencies {
+//    compile 'com.squareup.retrofit:retrofit:2.0.0-beta2'
+//    compile 'com.squareup.retrofit:converter-gson:2.0.0-beta2'
+
+    compile group: 'org.jfxtras', name: 'jfxtras-agenda', version: '8.0-r5-SNAPSHOT'
+
+    // Dagger2 dependencies
+    compile 'org.glassfish:javax.annotation:10.0-b28'
+    compile group: 'com.google.dagger', name: 'dagger', version:'2.1-SNAPSHOT'
+    compile group: 'com.google.dagger', name: 'dagger-compiler', version:'2.1-SNAPSHOT'
+
+    compile 'org.slf4j:slf4j-api:1.7.12'
+    compile 'org.slf4j:slf4j-log4j12:1.7.12'
+
+    testCompile 'junit:junit:4.12'
+    testCompile 'org.mockito:mockito-core:1.9.5'
+    testCompile 'org.assertj:assertj-core:2.2.0'
+}
+
+// Configures plugin
+javafx {
+    // Points to JDK and its JavaFX libraries, also declares target runtime JDK
+    javaRuntime = '/Library/Java/JavaVirtualMachines/jdk1.8.0_72.jdk'
+
+    // Application name and ID presented by target OS
+    appID 'Wt4'
+    appName 'Wt4'
+
+    // Main class of application
+    mainClass 'lt.markmerkk.Main'
+
+    // JVM arguments, system properties, application command line arguments
+    jvmArgs = ['-XX:+AggressiveOpts', '-XX:CompileThreshold=1']
+    systemProperties = ['prism.disableRegionCaching':'true']
+    arguments = ['-l', '--fast']
+
+    // Keystore credentials for signing JAR
+    // Generate key: keytool -genkey -alias release -keyalg RSA -keystore keystore.jks -keysize 2048
+    releaseKey {
+        alias = 'release'
+        keyPass = 'asdf123'
+        keyStore = file("${System.properties['user.home']}/global_keystore.jks")
+        storePass = 'asdf123'
+    }
+
+    signingMode 'release'
+
+    // ...
+}
+
+compileJava {
+    description = "dagger annotation processor is loaded automatically from classpath"
+    sourceSets.dagger.java.srcDirs*.mkdirs()
+    classpath += configurations.compileDagger
+    options.compilerArgs += [
+            '-s', sourceSets.dagger.java.srcDirs.iterator().next()
+    ]
+}
+
+clean {
+    description = "delete files in generated source directory tree"
+    delete fileTree(dir: sourceSets.dagger.java.srcDirs.iterator().next())
+}
